			       =================
				BOGOFILTER NEWS
			       =================

Note: 

  Release 0.17.0 is the "Code Clean-up Release - Phase 2".

  Be sure to read RELEASE.NOTES-0.17 !
 
0.17.4	2004-03-??

	2004-03-19

	* Fix "Can't find '.MSG_COUNT'" problem in bogotune.

	2004-03-18

	* Fix message reporting lack of config file.

0.17.3	2004-03-17

	2004-03-15
	
	* Warn if user specified config file doesn't exist.

	2004-03-09

	* Fix tagging of IPAddrs in header lines.

	2004-03-04

	* Added code to Berkeley DB Concurrent Data Store, which uses
	  a "DB_ENV" BerkeleyDB environment and the BerkeleyDB Lock
	  Manager.  This is documented in file doc/README.db.

	2004-03-03

	* "bogofilter -Q" output now includes all config file options
          and is formatted to be read in as a config file.

	2004-02-27

	* Removed t.lock2 from "make check".

	2004-02-26

	* Fixed minor bogotune problems related to building wordlists.

	2004-02-23

	* Exempt tokens .MSG_COUNT and .ROBX from maintenance operations.
	* Remove unused 'active' and 'weight' attributes of wordlists.
	* If message uses CRLF, put CRLF after added header lines.

	2004-02-22

	* Fixed code causing gcc 2.9x complaint.

0.17.2	2004-02-22

	* Algorithm code cleanup -- created file score.[ch] from
          files method.[ch], robinson.[ch], and fisher.[ch]

	2004-02-21
	
	* Changed path in example config files to /var/spool/bogofilter.

	2004-02-20
	
	* Corrected typos in doc/bogofilter.xml (the man page)
	  and in contrib/mailfilter.example
	* Documented bogoutil's histogram ('-H') option.
	* Revised documentation of '-d', '-p', and '-w' options
	  for bogoutil.
	* Relax filename vs. path restrictions in bogoutil.

	2004-02-19
	
	* Added experimental code for BerkeleyDB environments code
	  for improved locking and caching.

0.17.1	2004-02-09

	* 2004-02-05

	* Additional portability fixes for SunOS 4.1.4

	* 2004-02-04

	* Fix '-d' and '--bogofilter_dir=directory' options.

0.17.0	2004-02-01
