@@ -1,6 +1,6 @@
 Histogram
 score   count  pct  histogram
-0.00     3506 66.31 ################################################
+0.00     3500 66.28 ################################################
 0.05        1  0.02 #
 0.10        1  0.02 #
 0.15        7  0.13 #
@@ -16,10 +16,10 @@ score   count  pct  histogram
 0.65      129  2.44 ##
 0.70        6  0.11 #
 0.75       23  0.44 #
-0.80       61  1.15 #
+0.80       61  1.16 #
 0.85       13  0.25 #
 0.90       29  0.55 #
-0.95     1265 23.93 ##################
-tot      5287
-hapaxes:  ham    2581 (48.82%), spam     784 (14.83%)
-   pure:  ham    3506 (66.31%), spam    1257 (23.78%)
+0.95     1265 23.95 ##################
+tot      5281
+hapaxes:  ham    2580 (48.85%), spam     784 (14.85%)
+   pure:  ham    3500 (66.28%), spam    1257 (23.80%)
